--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit
-pandas
-numpy
-matplotlib
-scikit-learn
-keras
-tensorflow
-# Requirements
+pandas==1.5.3
+numpy==1.23.5
+matplotlib==3.7.1
+scikit-learn==1.2.2
+tensorflow==2.11.0
+
